snapshot-tests/tests/snapshots/parser__bad_table_names__unterminated_three.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[UnterminatedString]: invalid literal string, expected `'`
  ┌─ unterminated_three:1:6
  │
1 │ [''']
  │      ^ expected `'`
